<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00F4EC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="313dp"
        android:layout_height="37dp"
        android:text="Event Registration App"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/eventNameEdit"
        android:layout_width="303dp"
        android:layout_height="52dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Enter Event Name"
        android:background="#FFFFFF"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/eventDateEdit"
        android:layout_width="303dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="date"
        android:background="#FFFFFF"
        android:hint="Enter Event Date"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventNameEdit" />

    <EditText
        android:id="@+id/eventOrganizerEdit"
        android:layout_width="303dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:hint="Enter Event Organizer/Company"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDateEdit" />

    <Spinner
        android:id="@+id/citySpinner"
        android:layout_width="360dp"
        android:layout_height="26dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:entries="@array/provinces"

        android:prompt="@string/prompt"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventOrganizerEdit" />

    <CheckBox
        android:id="@+id/isCorporateCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="Corporate"
        app:layout_constraintEnd_toStartOf="@+id/isNonProfitCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/citySpinner" />

    <CheckBox
        android:id="@+id/isNonProfitCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="Not-For-Profit"
        app:layout_constraintEnd_toEndOf="@+id/isEducationCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/citySpinner" />

    <CheckBox
        android:id="@+id/isEducationCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="12dp"
        android:text="Educational"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/citySpinner" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_button_text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reset_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdbGp1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="167dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="32dp"
        android:text="@string/radio_group_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rdbGp1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isNonProfitCheckBox"
        app:layout_constraintVertical_bias="0.475" />

    <RadioGroup
        android:id="@+id/rdbGp1"
        android:layout_width="187dp"
        android:layout_height="91dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isNonProfitCheckBox">

        <RadioButton
            android:id="@+id/rdb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1" />

        <RadioButton
            android:id="@+id/rdb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2" />
    </RadioGroup>

    <TextView
        android:id="@+id/enteredDetailsTextView"
        android:layout_width="373dp"
        android:layout_height="117dp"
        android:layout_marginBottom="4dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>